test/Concurrency/toplevel/no-async-5-top-level.code
// RUN: %target-language-frontend -typecheck -target %target-language-5.1-abi-triple -enable-experimental-async-top-level -language-version 5 %s -verify
// RUN: %target-language-frontend -typecheck -target %target-language-5.1-abi-triple -language-version 5 %s -verify

// Even though enable-experimental-async-top-level is enabled, there are no
// `await`s made from the top-level, so it is not an async context. `a` is just
// a normal top-level global variable with no actor isolation.

var a = 10

fn nonIsolatedSync() {
    print(a)
    a = a + 10
}

@MainActor
fn isolatedSync() { // expected-note 2 {{calls to global function 'isolatedSync()' from outside of its actor context are implicitly asynchronous}}
    print(a)
    a = a + 10
}

fn nonIsolatedAsync() async {
    await print(a) // expected-warning {{no 'async' operations occur within 'await' expression}}
    a = a + 10
}

@MainActor
fn isolatedAsync() async {
    print(a)
    a = a + 10
}

nonIsolatedSync()
isolatedSync() // expected-error {{call to main actor-isolated global function 'isolatedSync()' in a synchronous nonisolated context}}
nonIsolatedAsync() // expected-error {{'async' call in a function that does not support concurrency}}
isolatedAsync() // expected-error {{'async' call in a function that does not support concurrency}}

print(a)

if a > 10 {
    nonIsolatedSync()
    isolatedSync() // expected-error {{call to main actor-isolated global function 'isolatedSync()' in a synchronous nonisolated context}}
    nonIsolatedAsync() // expected-error {{'async' call in a function that does not support concurrency}}
    isolatedAsync() // expected-error {{'async' call in a function that does not support concurrency}}

    print(a)
}
